# AdventOfCode2024

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  antinodes_8hpp.html  antinodes_8hpp.js  antinodes_8hpp_source.html  antinodes__test_8cpp.html  antinodes__test_8cpp.js  assertions_8hpp.html  assertions_8hpp.js  assertions_8hpp_source.html  astar_8cpp.html  astar_8hpp.html  astar_8hpp.js  astar_8hpp_source.html  astar__test_8cpp.html  astar__test_8cpp.js  blocker_8cpp.html  blocker_8cpp.js  blocker_8hpp.html  blocker_8hpp.js  blocker_8hpp_source.html  blocker__test_8cpp.html  blocker__test_8cpp.js  cell__type_8hpp.html  cell__type_8hpp.js  cell__type_8hpp_source.html  check__sum__calculation_8cpp.html  check__sum__calculation_8cpp.js  check__sum__calculation_8hpp.html  check__sum__calculation_8hpp.js  check__sum__calculation_8hpp_source.html  check__sum__calculation__test_8cpp.html  check__sum__calculation__test_8cpp.js  chunk_8cpp.html  chunk_8cpp.js  chunk_8hpp.html  (+991 more)
.github/workflows/: Benchmarks.yaml  Build.yaml  Build.yml  Doxygen.yaml  Test.yaml
cmake/: AOCBenchmark.cmake  AOCDay.cmake  AOCExecutable.cmake  AOCLibrary.cmake  AOCTest.cmake
day_1/: CMakeLists.txt  calculations.cpp  calculations.hpp  exit_code.hpp  file_operations.cpp  file_operations.hpp  file_ops.cpp  file_ops.hpp  main.cpp  parser.cpp  parser.hpp  print_compatibility_layer.hpp  printer.hpp  ranges_compat.hpp  ranges_compatibility_layer.hpp  utils.cpp  utils.hpp
day_1/benchmark/: CMakeLists.txt  benchmark.cpp  main.cpp
day_1/lib/: CMakeLists.txt  calculations.cpp  calculations.hpp  concurrent_context.hpp  file_operations.cpp  file_operations.hpp  lexer_rule.hpp  multiset_column_lexer.cpp  multiset_column_lexer.hpp  parser.cpp  parser.hpp
day_1/src/: CMakeLists.txt  main.cpp
day_1/test/: CMakeLists.txt  calculations_test.cpp  multiset_column_lexer_test.cpp  parser_test.cpp
day_10/: CMakeLists.txt
day_10/lib/: topography.hpp  trail_parser.cpp  trail_parser.hpp  trails.cpp  trails.hpp
day_10/src/: main.cpp
day_10/test/: trail_parser_test.cpp  trails_test.cpp
day_11/: CMakeLists.txt
day_11/benchmark/: main.cpp
day_11/lib/: parser.cpp  parser.hpp  parsing_error.cpp  parsing_error.hpp  stone.cpp  stone.hpp
day_11/src/: main.cpp
day_11/test/: stone_test.cpp
day_12/: CMakeLists.txt
day_12/lib/: direction.hpp  parser.cpp  parser.hpp  plant_location.cpp  plant_location.hpp
day_12/src/: main.cpp
day_12/test/: parser_test.cpp  plant_location_test.cpp
day_13/: CMakeLists.txt
day_13/lib/: calculations.cpp  calculations.hpp  header.hpp  linear_algebra.hpp
day_13/src/: main.cpp
day_14/: CMakeLists.txt
day_14/lib/: robots.cpp  (+3 more)
day_15/: CMakeLists.txt
day_16/: CMakeLists.txt
day_17/: CMakeLists.txt
day_18/: CMakeLists.txt
day_19/: CMakeLists.txt
day_2/: CMakeLists.txt
day_3/: CMakeLists.txt
day_4/: CMakeLists.txt
day_5/: CMakeLists.txt
day_6/: CMakeLists.txt
day_7/: CMakeLists.txt
day_8/: CMakeLists.txt
day_9/: CMakeLists.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+92 more)
shared/: CMakeLists.txt  concurrent_context.hpp  execution_policy_traits.hpp  exit_code.hpp  file_operations.cpp  file_operations.hpp  lexer.hpp  line_lexer.hpp  multiset_column_lexer.hpp  print_compatibility_layer.hpp  ranges_compatibility_layer.hpp
(+187 files in other folders)
